[tool.poetry]
name = "hydra_unas_sweeper"
version = "0.1.0"
description = "MIT"
authors = ["Christoph Gerum <christoph.gerum@uni-tuebingen.de>"]
packages = [
    { include = "hydra_plugins" }
]

[tool.poetry.dependencies]
python = "^3.6.1"
hydra-core = "^1.0.3"
tabulate = "^0.8.0"
numpy = "^1.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
